<resources>
    <string name="app_name">Typing Test</string>
    <string name="start_game">Start</string>
    <string name="single_word">SINGLE WORD</string>
    <string name="single_word_title">Single Word</string>
    <string name="paragraph">PARAGRAPH</string>
    <string name="paragraph_title">Paragraph</string>
    <string name="time_left">Time Left</string>
    <string name="sample_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Nullam vel ligula eget magna porttitor ultricies.
        Integer aliquam quis purus vitae imperdiet.
        Proin a sodales neque.
        Donec consectetur ex pulvinar nulla dictum feugiat.
        Proin molestie tellus sit amet diam imperdiet molestie nec vel risus.
        Nunc feugiat sem id venenatis rhoncus.
        Fusce et feugiat eros. Curabitur sollicitudin eleifend lorem, id maximus lacus maximus ac.
        Pellentesque vehicula sem ac sagittis pharetra.
        Nam lacinia consequat risus, eget tincidunt urna tincidunt sit amet.
        Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
        Integer molestie ac ex in sagittis.
        Cras nunc quam, mattis at metus vitae, placerat pretium sapien.
        Suspendisse pretium augue sed facilisis tincidunt.</string>
    <string name="zero">00:00</string>
    <string name="correct_letter">Correct Letter Count :</string>
    <string name="correct_word">Correct Word Count:</string>
    <string name="typing_speed">Typing Speed:</string>
    <string name="nickname">Nickname: </string>
    <string name="OK">OK</string>
    <string name="player">Player :</string>
    <string name="score">SCORE :</string>
    <string name="high_score">HIGH SCORE</string>
    <string name="high_score_title">High Score</string>
    <string name="WPM">WPM</string>
    <string name="correct_letter_count">Correct letter count : </string>
    <string name="typing_test">Typing Test</string>
    <string name="current_user">Current User :</string>
</resources>
