<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textAlignment="center"
        android:id="@+id/txtCorrectLetter"
        android:text="@string/correct_letter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtCorrectWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/correct_word"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/txtTypingSpeed"
        android:textColor="#ff0000 "
        android:textAlignment="center"
        android:text="@string/typing_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>
</LinearLayout>