<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/txtTimer"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#000"
        android:textSize="22sp"
        android:text="@string/time_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ProgressBar
        android:layout_marginTop="10dp"
        android:id="@+id/typingProgress"
        android:background="#e8e4e4"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/txtParagraph"
        android:textStyle="bold"
        android:text="@string/sample_text"
        android:layout_marginTop="30dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/txtResult"
        android:visibility="gone"
        android:textAlignment="center"
        android:text="@string/paragraph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:layout_marginTop="30dp"
        android:id="@+id/edtTextWriter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>