<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:gravity="center"
        android:id="@+id/card_view"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/WhiteSmoke"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="2dp"
        card_view:cardUseCompatPadding="true">
        <LinearLayout
            android:baselineAligned="false"
            android:weightSum="7"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_weight="6"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/Black"
                android:id="@+id/txtHighScoreNick"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginStart="10dp"
                android:text="@string/player"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@color/Black"
                android:layout_marginStart="10dp"
                android:id="@+id/txtCorrectLetterCount"
                android:text="@string/correct_letter_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@color/Black"
                android:id="@+id/txtHighScoreScore"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginStart="10dp"
                android:text="@string/score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imgHighScoreImg"
                android:src="@drawable/main_menu"
                android:contentDescription="@string/paragraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>